@@ -22,18 +22,126 @@
         <skipTests>true</skipTests>
     </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.jacoco</groupId>
-            <artifactId>org.jacoco.agent</artifactId>
-            <version>0.8.10</version>
-            <classifier>runtime</classifier>
-            <scope>test</scope>
-        </dependency>
-    </dependencies>
-
     <build>
         <finalName>${project.artifactId}-${project.version}</finalName>
+        <pluginManagement>
+            <plugins>
+
+                <!--
+                       Failsafe plugin.
+                       https://maven.apache.org/surefire/maven-failsafe-plugin/
+
+                       Used to execute integration tests.
+
+                       Note: We do not use the src/test/java source root for tests, as
+                       we expect to have a single module containing all tests in
+                       src/main/java that are executed on the module path. Using a single
+                       source root at this location avoids having to have duplicate module
+                       descriptors (one in src/main/java, and one in src/test/java).
+                -->
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>3.1.2</version>
+                    <configuration>
+                        <!--
+                        This "argLine" property is generated by the
+                        jacoco-maven-plugin below. It is necessary to ensure that tests
+                        are executed with the proper agent to measure coverage.
+                        -->
+                        <argLine>@{argLine}</argLine>
+                        <testSourceDirectory>${project.build.sourceDirectory}</testSourceDirectory>
+                        <testClassesDirectory>${project.build.outputDirectory}</testClassesDirectory>
+                        <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>failsafe-integration-tests</id>
+                            <goals>
+                                <goal>integration-test</goal>
+                            </goals>
+                            <phase>integration-test</phase>
+                        </execution>
+                    </executions>
+                </plugin>
+
+                <!--
+                         Surefire plugin.
+                         https://maven.apache.org/surefire/maven-surefire-plugin/
+
+                -->
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.1.2</version>
+                    <configuration>
+                        <argLine>@{argLine}</argLine>
+                        <skipTests>${skipTests}</skipTests>
+                        <testFailureIgnore>true</testFailureIgnore>
+                    </configuration>
+                </plugin>
+                <!--
+                        Maven JaCoCo plugin.
+                        https://www.jacoco.org/
+
+                        This collects code coverage data for publication.
+                    -->
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>0.8.10</version>
+                    <executions>
+                        <!--
+                        The prepare-agent goals define an @argLine property
+                        that is later passed to the Surefire and Failsafe plugins.
+                        The @argLine property essentially contains the fully-qualified
+                        path of the agent that will be run in the VM to measure code
+                        coverage. These goals can be run at any point in the build as
+                        long as it's before the test executions.
+
+                        The same jacoco.exec file is used for ordinary tests and for
+                        integration tests, so the 'append' flag is needed in order to
+                        avoid having the agent overwrite the file when the integration
+                        tests are run after the unit tests.
+                        -->
+                        <execution>
+                            <id>jacoco-agent</id>
+                            <goals>
+                                <goal>prepare-agent</goal>
+                            </goals>
+                            <phase>validate</phase>
+                            <configuration>
+                                <destFile>${project.build.directory}/jacoco.exec</destFile>
+                                <append>true</append>
+                            </configuration>
+                        </execution>
+                        <!--
+                          The report-aggregate goal produces a single aggregate report
+                          that is then uploaded to coverage services, or used to produce
+                          a full HTML report. It uses the file created in the merge
+                          goal above.
+                        -->
+                        <execution>
+                            <id>jacoco-report-merged</id>
+                            <phase>post-integration-test</phase>
+                            <goals>
+                                <goal>report-aggregate</goal>
+                            </goals>
+
+                            <configuration>
+                                <includeCurrentProject>true</includeCurrentProject>
+                                <dataFileIncludes>
+                                    <dataFileInclude>**/jacoco.exec</dataFileInclude>
+                                </dataFileIncludes>
+
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+
+            </plugins>
+        </pluginManagement>
+
         <plugins>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -43,57 +151,27 @@
                     <encoding>UTF-8</encoding>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M3</version>
-                <configuration>
-                    <argLine>
-                        --illegal-access=permit
-                    </argLine>
-                    <!--                    <argLine>@{surefireArgLine}</argLine>-->
-                    <argLine>@{argLine}</argLine>
-                    <trimStackTrace>false</trimStackTrace>
-                    <skipTests>${skipTests}</skipTests>
-                    <testFailureIgnore>true</testFailureIgnore>
-                    <includes>
-                        <include>**/*Test.java</include>
-                    </includes>
-                </configuration>
-            </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.5.3</version>
             </plugin>
+
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.10</version>
-                <executions>
-                    <execution>
-                        <id>prepare-agent</id>
-                        <goals>
-                            <goal>prepare-agent</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>jacoco-site</id>
-                        <!--                        <phase>package</phase>-->
-                        <goals>
-                            <goal>report</goal>
-                        </goals>
-                        <configuration>
-                            <includes>
-                                <!--                                C:\Projects\jococo\test\multi-module\-->
-                                <!--                                <include>${project.basedir}/../multi-module-core/src/main/java/**</include>-->
-                                <include>${project.basedir}/../multi-module-core/target/classes/**</include>
-                            </includes>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
 
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 </project>
